feat: register car on database

--- a/SpringBootCadastro/src/main/resources/application.properties
+++ b/SpringBootCadastro/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=ModelosHonda
+
+spring.application.name=SpringBootPrimeiroExemplo
+
+##default connection pool
+spring.datasource.hikari.connectionTimeout=2000
+spring.datasource.hikari.maximumPoolSize=5
+
+logging.pattern.console=%-5level %logger{36} - %msg%n
+
+##PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/modelos_honda
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
+##management.endpoints.web.exposure.include=*
